# jester-gb

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  jester.rc
.github/workflows/: build.yml
roms/: .gitkeep
src/: main.cpp  types.hpp
src/apu/: apu.cpp  apu.hpp
src/bus/: bus.cpp  bus.hpp
src/cartridge/: cartridge.cpp  cartridge.hpp
src/cpu/: cpu.cpp  cpu.hpp  opcodes.hpp
src/input/: input.cpp  input.hpp
src/ppu/: ppu.cpp  ppu.hpp
src/tui/: menu.cpp  menu.hpp  renderer.cpp  renderer.hpp  terminal.cpp  terminal.hpp
tests/: .gitkeep
